--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h2>Dónde alojarse</h2>
     <p>Hay varios hoteles cerca del lugar:</p>
     <ul> 
-      <h1>En Tielmes</h1>
+      <h1>En Perales de Tajuña</h1>
       <li><strong><a href="https://lagardenemesio.es/hotel/">El Lagar de Nemesio</a></strong></li> 
       <p>Un hotel pequeño y encantador a solo 10 minutos en coche del lugar. El espacio es limitado.</p>        
 
@@ -163,31 +163,57 @@
         <div class="party-column">
           <h3>Damas de Honor</h3>
           <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p style="text-align: center;">Dani</p>
-          <p></p></div>
+          <p>Después de 16 años de amistad, no podía faltar entre mis damas de honor. 
+            Un pilar en mi vida, siempre pendiente de que todo el mundo esté bien, un amigo increíble.
+            Siempre, en las buenas y en las no tan buenas. 
+            Y aunque parece muy serio, cuando coge confianza, no vais a encontrar a alguien más guasón, aunque quiera negarlo. 
+            Un profesor de primera, un escritor increíble (si queréis leerle, decidme y os paso link ;) Y quedáis avisados de que, como bien me ha dicho varias veces, se le “caerá” una copa de vino encima de quien se le ocurra venir de blanco. </p></div>
           <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p style="text-align: center;">Laia</p>
-          <p></p></div>
+          <p>Esta personita es una de mis mejores amigas, loca como pocas, fiel hasta la muerte, y dispuesta a defenderte de lo que haga falta. 
+            Una pequeña terremoto que cuando pasa, nunca te deja indiferente. 
+            Pocas veces digo lo orgullosa que estoy de ella, pero con su experiencia demuestra lo que es luchar por lo que se quiere y superarse a una misma. 
+            Tras 28 años juntas, hemos pasado de todo, nuestras penas y millones de historias locas y disparatadas, demostrando la poca vergüenza que siempre hemos tenido… 
+            Mejor no entrar en esto, se supone que hay que ser formal.</p></div>
           <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p>
-          <p></p></div>
+            <p>Aunque no la conozco desde hace tantos años como al resto (bueno… 
+              9 años tampoco son pocos), Nathalie ha marcado mi vida desde el principio. 
+              Nos fuimos a vivir juntas mientras estudiábamos arte dramático, sin planearlo. 
+              Y estaba claro que era el destino, teníamos que pasar esos 4 años maravillosos juntas. 
+              Y aunque ella sea nocturna y yo diurna, ella tarde una hora en despertarse y yo me duerma en el sofá a las 9, no podría haber encontrado una mejor compañera de piso.
+               Y que no os engañe con su tamaño, que aquí tenemos a otra terremoto. </p></div>
           <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p style="text-align: center;">Vero</p>
-          <p></p></div>
+          <p>Cuando nos conocimos, hicimos click desde el principio, incluso llegamos a ser maridas (sí, nos casamos en el London Eye con un anillo de papel).
+            La vida nos hizo distanciarnos durante unos años, pero el destino sabía que teníamos que acompañarnos por el resto de nuestra vidas, ver cómo maduramos, como evolucionamos.
+             Y no puedo estar más orgullosa de ella y de nosotras por haber peleado contra las circunstancias para poder disfrutar de nuestros logros. 
+             Y no podría imaginar mi día sin ella a mi lado. </p></div><br><br>
           <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p style="text-align: center;">Merche</p>
-          <p></p></div>
+          <p>Merche es un pilar en mi vida, alguien que aporta un sentido maternal que te tranquiliza en los momentos más estresantes. 
+            Aunque las cosas de la vida nos impiden hablar tanto como nos gustaría, siempre está para tí cuando la necesitas.
+             Protectora con los suyos hasta un punto que, aceptémoslo, da un poco de miedo.
+              Inteligente, loca e ingenua al mismo tiempo. Y que no os engañe esta carita de santa, que es la más lianta de todos los aquí presentes. 
+              Podéis traeros unas palomitas a la boda, porque el show está asegurado. </p></div>
           <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p style="text-align: center;">Marina</p>
-          <p></p></div>
+          <p>Puff… hablando de años… 32 años juntas, aguantándonos, queriéndonos (a nuestra manera), atacándonos (no se me ha olvidado cuando me mordió con 5 años, no… aunque bueno, puedo aceptar que yo la empujé primero…). 
+            Es curioso como alguien a quien sólo “tolerabas” porque teníamos el mismo grupo de amigas, es con quien más años has pasado juntas y una de las personas a la que más quieres en este mundo. 
+            Y no cambiaría absolutamente nada. (Por cierto, otra lianta que viene… dime con quién andas…)</p></div><br>
           <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p style="text-align: center;">Zoë</p>
-          <p></p></div>
+          <p>Yo nunca tuve una hermana, pero, aun en la distancia, siento que tengo una para lo que necesite.
+             Una persona sensible, compasiva, y muy muy talentosa (deberíais escucharla cantar, una maravilla).
+              Una persona que muestra los valores tan importantes que fueron inculcados por sus padres, Celest y Bob.
+               Ya sabemos lo que se dice, “quien a los suyos se parece, honra merece”.
+                Y debe estar tan orgullosa de sí misma como lo estamos nosotros de ella. </p></div>
         </div>
         <div class="party-column">
           <h3>Padrinos</h3>
           <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p style="text-align: center;">Zack</p>
           <p>Probablemente Zack sea la principal razón por la que estés aquí hoy.
              No solo se convirtió en uno de nuestros mejores amigos en París, sino que además fue él quien presentó a Paula la oportunidad laboral que la llevaría desde Madrid a París, poniendo fin de la mejor manera posible a nuestra relación a distancia. 
-            Además de su ingenio, descubrirás que la empatía y el encanto de Zack siempre estarán ahí para ti.</p><br></div>
+            Además de su ingenio, descubrirás que la empatía y el encanto de Zack siempre estarán ahí para ti.</p><br></div><br><br>
           <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p style="text-align: center;">Dimi</p>
           <p>Ni se te ocurra… Ni pienses en cantar “here’s to brother Austin” el día de mi boda... 
             Uno de mis mejores amigos y el más cercano, que siempre ha estado ahí apoyándome a mí y ahora también a Paula. 
             Dimi y yo nos conocimos en la fraternidad Alpha Gamma Rho de la Universidad de Vermont, y hasta hoy es mejor que no nos dejen solos con nada más fuerte que cerveza.
-            Aunque si la boda deriva en cocina nocturna… probablemente tampoco deberían dejarnos cerca de la freidora.</p><br></div>
+            Aunque si la boda deriva en cocina nocturna… probablemente tampoco deberían dejarnos cerca de la freidora.</p><br></div><br>
           <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p style="text-align: center;">Jamie</p>
           <p>No es frecuente que uno se una a una fraternidad y termine con una hermana como hermano, pero así es con Jamie, que siempre será para mí parte de Alpha Gamma Rho. 
             Si Dimi me metía en problemas, Jamie siempre se ha asegurado de sacarme de ellos, o por lo menos de garantizar que llegara al día siguiente. 
@@ -202,7 +228,7 @@
           <p> Alba es mi "Dimi española"… Nadie es más peligrosa a la hora de la fiesta. 
             Aunque quiero pensar que me defiendo bien, en el fondo sé que ella siempre gana. 
             Siempre presente y confiable, Alba fue parte esencial del famoso grupo de WhatsApp "cactus". Si sabes, sabes. 
-            Ahora viviendo en Berlín, ha venido para protegerme de los Long Island iced teas de Jamie, bebiéndoselos ella.</p><br></div>
+            Ahora viviendo en Berlín, ha venido para protegerme de los Long Island iced teas de Jamie, bebiéndoselos ella.</p><br></div><br><br><br>
           <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p style="text-align: center;">Guille</p>
           <p> Aquí llegamos al momento en que presumo lo afortunado que soy. 
             El hermano de Paula, Guille, ahora es también mío. Desde que nos conocemos, su generosidad y aceptación me han regalado otro hermano. 
@@ -227,6 +253,10 @@
           <div class="party-item">
             <img src="images/damas/scott.jpeg" alt="Scott"/>
             <p style="text-align: center;">Scott</p>
+            <p>Scott es una persona inteligente, sensible (ya me ha dicho que va a llorar en la boda) y de lo más guasón que conozco.
+               A lo mejor al principio se intenta hacer el duro, pero en el fondo es una persona maravillosa que no duda en darlo todo para ayudar a los demás. 
+               Sé que nos ama a los dos, por eso me hace tanta ilusión que sea nuestro oficiante… en español, lo cual es irónico, ya que es escocés. 
+               Pero no os preocupéis, lleva ochocientos años en España</p>
           </div>
         </div>
         <div class="party-column">
