--- a/index.html
+++ b/index.html
@@ -69,25 +69,28 @@
       <p>Un hotel pequeño y encantador a solo 10 minutos en coche del lugar. El espacio es limitado.</p>        
 
       <h1>En Arganda del Rey</h1>
-      <p>Si deseas llegar en transporte público a Arganda del Rey, te recomendamos estos:</p>
+      <p>Si deseas llegar en transporte público a Arganda del Rey y luego coger un taxi a la casa rural, te recomendamos estos:</p>
       <li><strong><a href="https://www.hotel-bb.com/en/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li><br>         
       <li><strong><a href="https://www.sercotelhoteles.com/en/hotel-ab-arganda">Sercotel Arganda</a></strong></li><br>
 
       <h1>En Chinchón</h1>
-      <p>Si estás pensando en alquilar un coche y prefieres una experiencia de pueblo, te recomendamos alojarte en Chinchón. Está constantemente considerado uno de los pueblos más bonitos de España.</p> 
+      <p>Si estás pensando en alquilar un coche y prefieres una experiencia de pueblo, te recomendamos alojarte en Chinchón. Es considerado uno de los pueblos más bonitos de España.</p> 
       <li><strong><a href="https://paradores.es/en/parador-de-chinchon">Parador de Chinchón</a></strong></li>
       <p>Ubicado en un antiguo monasterio, los Paradores son de los hoteles más bonitos que encontrarás en toda España.</p>
       <li><strong><a href="http://www.condesadechinchon.com/en/">Hotel Condesa de Chinchón</a></strong></li>
       <p>Si no te apetece lo monástico, prueba la Condessa.</p>
      
       <h1>Opciones económicas</h1>
-      <p>Aunque aún pueda ser necesario un coche</p>
+      <p>Hemos encontrado estas dos opciones, aunque todavía necesitarías coche</p>
       <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li><br>
       <li><strong><a href="https://hotellaquintadesantillan.top">Hotel La Quinta de Santillán</a></strong></li>
     </ul>
     <h1>Madrid</h1>
     <p>¡Madrid está a solo media hora en coche!</p>
-    <p>¿Entonces por qué no conocer la ciudad? Explora la Plaza Mayor, el Rastro o disfruta del arte en el Prado y el Thyssen. Ve un poco de flamenco, come en el Mercado de San Miguel y vive la vida castiza. Madrid es la maravillosa ciudad donde Austin y Paula se conocieron por primera vez tomando copas en la Plaza de la Paja. ¿Por qué no seguir sus pasos?</p>
+    <p>¿Entonces por qué no conocer la ciudad? Explora la Plaza Mayor, el Rastro o disfruta del arte en el Prado y el Thyssen. 
+      Ve un poco de flamenco, come en el Mercado de San Miguel y vive la vida castiza. 
+      Madrid es la maravillosa ciudad donde Austin y Paula se conocieron por primera vez tomando copas en la Plaza de la Paja.
+      ¿Por qué no seguir sus pasos?</p>
   </div>
 </section>
 
@@ -96,12 +99,13 @@
     <div class="container">
       <h2>Preguntas Frecuentes</h2>
       <ul>
-        <li><strong>Alergias a alimentos:</strong> <br>Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.</li>
+        <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong><br>El 15 de Julio.</li>
+        <li><strong>¿Cómo te puedo decir mis restricciones alimentarias?</strong> <br>Indícanos las intolerancias y alergias cuando confirmas tu asistencia</li>
         <br>
-        <li><strong>Clima:</strong><br>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
+        <li><strong>¿Qué tiempo hará?</strong><br>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
 </li>
         <br>
-        <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong><br>El 15 de Julio.</li>
+        
         <br>
         <li><strong>¿Quién puede ir a la boda?</strong>
           <br>Debido a la limitada capacidad de la casa rural, 
