--- a/index_en.html
+++ b/index_en.html
@@ -78,7 +78,7 @@
         <p>A small and charming hotel only a 10 minute drive from the venue. Space is limited</p>        
 
         <h1>In Arganda Del Rey</h1>
-        <p>If you wish to take public transit to Arganda del Rey then we'd recommend these:</p>
+        <p>If you wish to take public transit to Arganda del Rey and get a cab to the venue then we'd recommend either of these:</p>
         <li><strong><a href="https://www.hotel-bb.com/en/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li><br>         
         <li><strong><a href="https://www.sercotelhoteles.com/en/hotel-ab-arganda">Sercotel Arganda</a></strong></li> <br>
         <h1>In Chinchón</h1>
@@ -111,9 +111,9 @@
     <div class="container">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>When do I have to RSVP by:<br></strong>July 15th<br> If you need more time please reach out to us individually. </li>
+        <li><strong>When do I have to RSVP by?:<br></strong>July 15th<br> If you need more time please reach out to us individually. </li>
         <br>
-        <li><strong>Food allergies:</strong><br>Please let us know about any intolerances or allergies via the QR code on the invitation or the link we sent you.</li>
+        <li><strong>How can I tell you I have dietary restrictions?</strong><br>Please let us know about any food intolerances or allergies when you RSVP through the google form.</li>
         <br>
         <li><strong>Who is invited to the wedding?</strong><br>Due to the limited capacity of the venue, only those named on the invitation are invited. <em>(Austin has learned that marrying into a Spanish family means he now has a very big family).</em>
         If you wish to bring someone who is not named on the invitation, please reach out to us and we'll let you know if there is sufficient space following the initial round of RSVPs.</li>
