--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <li><strong><a href="https://paradores.es/en/parador-de-chinchon">Parador de Chinchón</a></strong></li>
       <p>Ubicado en un antiguo monasterio, los Paradores son de los hoteles más bonitos que encontrarás en toda España.</p>
       <li><strong><a href="http://www.condesadechinchon.com/en/">Hotel Condesa de Chinchón</a></strong></li>
-      <p>Si no te apetece lo monástico, prueba la Condessa.</p>
+      <p>Si no te apetece lo monástico, prueba la Condesa.</p>
      
       <h1>Opciones económicas</h1>
       <p>Hemos encontrado estas dos opciones, aunque todavía necesitarías coche</p>
@@ -100,7 +100,7 @@
       <h2>Preguntas Frecuentes</h2>
       <ul>
         <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong><br>El 15 de Julio.</li>
-        <li><strong>¿Cómo te puedo decir mis restricciones alimentarias?</strong> <br>Indícanos las intolerancias y alergias cuando confirmas tu asistencia</li>
+        <li><strong>¿Cómo te puedo decir mis restricciones alimentarias?</strong> <br>Indícanos las intolerancias y alergias cuando confirmes tu asistencia</li>
         <br>
         <li><strong>¿Qué tiempo hará?</strong><br>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
 </li>
