--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
             <p>Scott es una persona inteligente, sensible (ya me ha dicho que va a llorar en la boda) y de lo más guasón que conozco.
                A lo mejor al principio se intenta hacer el duro, pero en el fondo es una persona maravillosa que no duda en darlo todo para ayudar a los demás. 
                Sé que nos ama a los dos, por eso me hace tanta ilusión que sea nuestro oficiante… en español, lo cual es irónico, ya que es escocés. 
-               Pero no os preocupéis, lleva ochocientos años en España</p>
+               Pero no os preocupéis, lleva ochocientos años en España.</p>
           </div>
         </div>
         <div class="party-column">
           <div class="party-item">
             <img src="images/bestmen/tim.jpeg" alt="Tim"/><p style="text-align: center;">Tim</p>
             <p>Tim iba a ser uno de mis padrinos, pero luego pensé que es el único capitán que conozco, así que mejor tenerlo como oficiante. 
-              Tim y yo nos conocemos desde cuando yo estaba realmente en forma… y corría por diversión, créelo o no. 
+              Tim y yo nos conocemos desde cuando yo estaba realmente en forma… y corría por diversión, aúnque no lo creas. 
               Desde los pasillos de University High School en Connecticut hasta Madrid, él siempre ha sido alguien en quien puedo confiar para animarme con increíbles aventuras que disfruto <em>vicariamente</em>. 
               (Créeme que en inglés este juego de palabras es genial… porque normalmente quien te casa es un vicar).</p>
             </div>
