--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             Pocas veces digo lo orgullosa que estoy de ella, pero con su experiencia demuestra lo que es luchar por lo que se quiere y superarse a una misma. 
             Tras 28 años juntas, hemos pasado de todo, nuestras penas y millones de historias locas y disparatadas, demostrando la poca vergüenza que siempre hemos tenido… 
             Mejor no entrar en esto, se supone que hay que ser formal.</p></div>
-          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Nathalie"/><p style="text-align: center;">Nathalie</p>
             <p>Aunque no la conozco desde hace tantos años como al resto (bueno… 
               9 años tampoco son pocos), Nathalie ha marcado mi vida desde el principio. 
               Nos fuimos a vivir juntas mientras estudiábamos arte dramático, sin planearlo. 
