--- a/index_en.html
+++ b/index_en.html
@@ -188,7 +188,7 @@
               I rarely say how proud I am of her, but her life journey shows what it means to fight for what you want and to overcome yourself. 
               After 28 years together, we’ve been through it all—our heartbreaks, and millions of crazy, ridiculous adventures, always proving just how shameless we've always been… 
               But we’d better not get into that we're supposed to be adults now after all.</p></div>
-          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p style="text-align: center;">Natalie</p>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Nathalie"/><p style="text-align: center;">Nathalie</p>
           <p> Even though I haven’t known her as long as the others (well… nine years isn’t exactly short), Nathalie has had a huge impact on my life from the very start.
              We ended up living together while studying drama: completely unplanned.
               But it was clearly meant to be. We had to spend those four wonderful years side by side. 
